# prometheus-bot

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  SETUP.md  Tarriff Data.csv  ai_token_business_plan.md  app.py  architecture_summary.md  component_conversion_steps.md  convert_trades_to_candles.py  deployment_checklist.md  docker-compose.yml  download_historical_data.py  download_kraken_data.py  enhanced_ma_strategy.py  generate_sample_data.py  generate_test_data.py  main.py  nextjs_migration_plan.md  package.json  prometheus.yml  pyproject.toml  requirements.txt  risk_calculator.py  run_bot.py  sample_volatility.csv  setup.bat  setup_trading_bot.bat  setup_trading_bot.sh  simple_alpaca_bot.py  simple_momentum_strategy.py  tailwind.config.example.js  tailwind.config.js  tariff_analysis.py  test_enhanced_strategy.py  test_strategy.py  test_yfinance.py  (+5 more)
api/: .env.example  README.md  Tarriff Data.csv  main.py  requirements.txt
content/: README.md  generate_content.py
core/: auth.py  config.py  database.py  logger.py
dashboard/: README.md  package.json
data/: provider.py
database/: README.md  base.py  connection.py  schema.py
landing-page/: README.md  conversion.js  deployment-checklist.md  error.html  formhandler.php  index.html  script.js  styles.css  thank-you.html
migrations/: env.py
ml_training/: train_xgb_model.py
models/: base.py  trading.py  user.py
pages/: index.js  thank-you.js
schemas/: user.py
service/: README.md
services/: user_service.py
stock-analysis/: README.md  stock_analyzer.py
stock_trading_bot/: README.md  requirements.txt  run_strategy.py  sp500_strategy.py  stock_data_handler.py
styles/: Home.module.css
templates/: index.html  status.html
tests/: README.md  conftest.py  test_api.py  test_config.py  test_content_generation.py  test_data_api.py  test_logger.py  test_market_analysis.py  test_market_analysis_api.py  test_market_data_provider.py  test_momentum_strategy.py  test_paper_trading.py  test_trading_api.py  test_trading_report.py  (+2 more)
(+30 files in other folders)
